fix: row span on tablet

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@
 }
 
 .imageCard {
-  @apply mx-[30px] grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-5 lg:mx-28
+  @apply mx-[30px] grid sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5 lg:mx-28
 }
 
 .learn-btn {
